<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="detail">Info</string>
    <string name="emptydetail">No user info. Click to add.</string>

    <plurals name="txt_days">
        <item quantity="zero">%d day</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="compensateurl">http://www.belgianrail.be/en/customer-service/compensation-for-delays.aspx</string>


    <string name="txt_editdelay">Edit delay value</string>
    <string name="txt_edittext">Edit text value</string>

    <string name="btn_home_compensate">Compensation</string>
    <string name="html_compensate"><![CDATA[<html><h1>Compensation</h1>If you want to use the Compensation feature in the app, press the Menu Button in the Train Information screen.<br/><br/><img src=\'comptuto.png\' width="100\%%"  /><br /><br />We actually find it unfortunate that you have found your way to this page. Despite all our efforts, one of your domestic train journeys was still delayed. Do you know that in certain instances you can receive <strong>compensation</strong> for the inconvenience?<br /><br /><a href="http://www.belgianrail.be/en/customer-service/compensation-for-delays/compensation-request.aspx">Requesting compensation</a><br /><h2>Right to compensation. When? How much?</h2>We draw a distinction between an occasional long delay and recurrent delays.<br /><h3>Occasional long delay</h3><ul><li>Delay of <strong>at least 60 minutes</strong> reimbursed at <strong>100\%%</strong> of the value of a one-way journey.</li></ul><h3>Recurrent delays</h3>Multiple delays within a <strong>6 month period</strong>.<br /><br /><ul><li><strong>A minimum of 20 delays of at least 15 minutes</strong> reimbursed for each delay at <strong>25\%%</strong> of the value of a one-way journey.</li><li><strong>A minimum of 10 delays of at least 30 minutes</strong> reimbursed for each delay at <strong>50% </strong>of the value of a one-way journey.</li></ul><p><strong>Please note</strong>: Sometimes you are <a href="http://www.belgianrail.be/en/customer-service/compensation-for-delays/no-compensation.aspx">not entitled to compensation</a>.</p><h2>Requesting compensation</h2><p>Submit your request <strong>within 15 calendar days</strong></p><ul><li>After your journey with a delay of at least 60 minutes</li><li>After your period of 6 months starting from your first delay</li><li>After using the final line of your Pass, Card, Campus or Half-time Railcard which is sent together with your request</li></ul><a href="http://www.belgianrail.be/en/customer-service/compensation-for-delays/compensation-request.aspx">Requesting compensation</a><br /><br /><a href="http://www.belgianrail.be/en/customer-service/compensation-for-delays/how-much-compensation.aspx">Calculate your own compensation</a><br /><br /><a href="http://www.belgianrail.be/en/customer-service/compensation-for-delays/what-compensation.aspx">How do we pay your compensation?</a><p></html>]]></string>

    <string name="empty_view_text">Click on the Widget Button in your train information</string>
    <string name="refresh">Refresh</string>
    <string name="kindhelp">With the kind help of</string>
    <string name="svTitle">StreetView not installed</string>
    <string name="txt_quai">Platform</string>
    <string name="svMessage">Please install Google StreetView</string>
    <string name="noMarket">Sorry, cannot detect Android Market</string>
    <string name="btn_home_settings">Preferences</string>
    <string name="btn_home_planner">Planner</string>
    <string name="btn_home_traffic">Traffic issues</string>
    <string name="btn_home_starred">Starred</string>
    <string name="tipa">Getting started</string>
    <string name="tipatitle">If you want to start immediately, click on the search button</string>
    <string name="tipb">Change stations</string>
    <string name="tipbtitle">If you want to look for an other trip, click on a station name and pick up an other one.
    </string>
    <string name="tipc">Change date/Time</string>
    <string name="tipctitle">Click on the date and time fields in the upper part to change your desired trip time.
    </string>
    <string name="tipd">Main menu</string>
    <string name="tipdtitle">Use the \'Home\' icon in the upper left part to go the the main menu.</string>
    <string name="app_name">BeTrains</string>
    <string name="btn_home_chat">Chat</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_patient">Please be patient...</string>
    <string name="txt_traffic_issues">Traffic Issues</string>
    <string name="txt_no_issue">No traffic issue</string>
    <string name="txt_duration">Dur:</string>
    <string name="txt_search">Search</string>
    <string name="api_key_prod">0K7Fau7cA-pYcbx1Ya_FeGZtHNa2af8KsUiryOg</string>
    <string name="api_key_debug">0K7Fau7cA-pYqOftHPiE2Z-kL15R-uk8aH2036g</string>
    <string name="add_widget">Add to Widget</string>
    <string name="url_lang">en</string>
    <string name="url_lang_2">e</string>
    <string name="url_lang_for_him">f</string>
    <string name="txt_connection">Please check your Internet connection.</string>
    <string name="txt_def_title">Default Title</string>
    <string name="txt_type_subway">Subway</string>
    <string name="txt_type_walk">Walk</string>
    <string name="txt_your_train">Your Train</string>
    <string name="txt_load_message">Loading last Message</string>
    <string name="txt_no_message">No message.</string>
    <string name="wid_empty">Open your train information and click \'Add to widget\'".</string>
    <string name="wid_confirm">Add to Widget?</string>
    <string name="wid_added">%s added to widget</string>
    <string name="txt_messages">Messages</string>
    <string name="txt_more_messages">More messages</string>
    <string name="txt_change">Change</string>
    <string name="settings_display_lm_desc">Under train information</string>
    <string name="settings_display_lm">Display Last Message</string>
    <string name="settings_pseudo">Nickname</string>
    <string name="settings_fullscreen">Fullscreen</string>
    <string name="settings_back">Back Button</string>
    <string name="settings_back_sum">Keep every screen in memory</string>
    <string name="settings_restart">You\'ll need to restart BETrains</string>
    <string name="settings_force_dutch">Force Dutch/Nederlands</string>
    <string name="settings_english">Only for english users</string>
    <string name="txt_filter_message">Please enter a train Number</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_numberoftrains">Trains :</string>
    <string name="txt_station">Station</string>
    <string name="txt_confirm_map">Launch Google Maps?</string>
    <string name="txt_confirm_nav">Launch Google Nav?</string>
    <string name="txt_add_fav">Add to fav.</string>
    <string name="txt_train">Train</string>
    <string name="txt_trip">Trip</string>
    <string name="txt_infrabel">This info comes from the Infrabel/Railtime website. Delays smaller than 5 minutes are
        not shown, and might be slightly different from previous page.
    </string>
    <string name="fav_no_fav_body">You can add your favorite stations, trains and
        trips here.\n\n* Add a favorite station by long-pressing it in the
        station list\n\n* Or, you can click on the top Bar icon in the Train, Station or Planner view.
    </string>
    <string name="fav_no_fav_title">No starred items</string>
    <string name="txt_remove">Delete</string>
    <string name="search_wrong_string">Please pick a station in the list or write a train
        number: ex: "984" for IC 984
    </string>
    <string name="search_hint">Train nb. / Station</string>
    <string name="changelog_title">ChangeLog</string>
    <string name="confirm_message_train">Open train %s messages?</string>
    <string name="confirm_info_train">Open train %s infos?</string>
    <string name="txt_server_down">Server down</string>
    <string name="txt_map">Map</string>
    <string name="txt_nav">Navigation</string>
    <string name="txt_invert_da">Departure/Arrival</string>
    <string name="txt_date">Date</string>
    <string name="txt_time">Time</string>
    <string name="settings_planner_da">Arrival/Departure time</string>
    <string name="settings_planner_da_summary">...</string>
    <string name="settings_activity">First Screen</string>
    <string name="settings_activity_summary">Where to start the application?</string>
    <string name="settings_train_only_summary">Will not show buses and subway</string>
    <string name="key_planner_da">Plannerdapref</string>
    <string name="key_activity">Activitypref</string>
    <string name="settings_train_only">Train Only</string>
    <string name="txt_no_driving">No Info on this train</string>
    <string name="txt_no_result">Sorry, no result.</string>
    <string name="txt_error">Something went wrong. Please check your connection
        again. Maybe our server is down...
    </string>
    <string name="txt_create_connections">Please update your search to see your trip
        informations.
    </string>
    <string name="btn_closest_stations">Closest Stations</string>
    <string name="txt_first_dl">The station list download will start. This is a
        slow process,
        but next time you will use it, everything will be faster.
    </string>
    <string name="txt_accuracy">Accuracy: %sm.</string>
    <string name="txt_wait_gps">Waiting for GPS fix.</string>
    <string name="update_gps_btn">Update:\n%sm</string>
    <string name="txt_info_station">Info station</string>
    <string name="txt_dl_stations">Downloading stations list</string>
    <string name="txt_fill_closest">Looking for closest station</string>
    <string name="txt_sort">Sorting list...</string>
    <string name="txt_location">If you cannot get GPS position, please enable it by
        clicking here.
    </string>
    <string name="pref_selectTrain">Your train</string>
    <string name="pref_stations">Stations to check</string>
    <string name="pref_weekdays">Days to check</string>
    <string name="pref_selectStartHour">Start updates at:</string>
    <string name="pref_selectEndHour">Stop updates at:</string>
    <string name="pref_selectFreq">Updates frequency</string>
    <string name="pref_selectStartHour_sum">Help your battery by avoiding updates during the night</string>
    <string name="pref_selectEndHour_sum">Help your battery by avoiding updates during the night</string>
    <string name="pref_selectFreq_sum">1 hour</string>
    <string name="stationpicker">Pick a Station</string>


</resources>