<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


    <PreferenceCategory android:title="BETrains" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/activity_entries"
            android:entryValues="@array/activity_values"
            android:key="@string/key_activity"
            android:summary="@string/settings_activity_summary"
            android:title="@string/settings_activity" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preffullscreen"
            android:summary="@string/settings_restart"
            android:title="@string/settings_fullscreen" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefnl"
            android:summary="@string/settings_english"
            android:title="@string/settings_force_dutch" />
    </PreferenceCategory>
    
        <PreferenceCategory android:title="@string/txt_messages" >
        <EditTextPreference
            android:defaultValue="Anonymous"
            android:key="prefPseudo"
            android:summary=""
            android:title="@string/settings_pseudo" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preffirstM"
            android:summary="@string/settings_display_lm_desc"
            android:title="@string/settings_display_lm" />
    </PreferenceCategory>

</PreferenceScreen>